<resources>
    <string name="app_name">Tutor</string>
    <string name="tutor">2utor</string>
    <string name="welcome_txt">The Best. We Match. No Fee.</string>
    <string name="study_abroad">Study Abroad</string>
    <string name="overseas_education">Overseas Education</string>
    <string name="action_settings">Settings</string>
    <string name="mystudents">My Students</string>
    <string name="findstudents">Find Students</string>
    <string name="findteacher">Find Tutors</string>
    <string name="myteachers">My Tutors</string>
    <string name="bookmark">Bookmark</string>
    <string name="notification">Notifications</string>
    <string name="my">My Profile</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="loading">Loading</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="tips">Tips</string>
    <string name="delete">Delete</string>
    <string name="logining">Logining&#8230;</string>
    <string name="forget_password">Forgot password</string>
    <string name="registering">Registering</string>
    <string name="register_cbtxt">You have agreed to the user agreement after registration</string>
    <string name="register_tip_tutor">Will be Register as a Student/Parent if selecting "Student/Parent" at first</string>
    <string name="register_tip_student">Will be Register as Tutor if selecting "Tutor" at first</string>
    <string name="team_conditions">Team&amp;Conditions</string>
    <string name="fill_personal_info">Fill Personal Information</string>
    <string name="edit_personal_info">Edit Your Person Information</string>
    <string name="add_timeslot">Add Timeslot</string>
    <string name="eb_1">Secondary School</string>
    <string name="eb_2">Higher Diploma/Associate Degree</string>
    <string name="eb_3">Bachelor</string>
    <string name="eb_4">Master or above</string>
    <string name="uploading_avatar">Uploading Avatar</string>
    <string name="set_pswd">Reset password</string>
    <string name="change_pswd">Change password</string>
    <string name="to_be_my_student">To Be My Student</string>
    <string name="to_be_my_student2">Invite you to be my student</string>
    <string name="to_be_my_tutor">To Be My Tutor</string>
    <string name="to_be_my_tutor2">Invite you to be my teacher</string>
    <string name="student_count">Student: %s</string>
    <string name="rating">Rating:</string>
    <string name="nust_flag">*</string>
    <string name="note">According to the regulation of the employment agency in Labour Department，the employment agency will keep the jobhunter’s address and HKID, and this information will be restricted by privacy policy of our application, please check our website for detail.</string>
    <string name="sys_notification">Notifications</string>
    <string name="label_role_student">Students/Parents</string>
    <string name="label_role_tutor">Tutors</string>
    <string name="label_name">Name: </string>
    <string name="label_avatar">Avatar:</string>
    <string name="label_hkid_number">HKID Number</string>
    <string name="label_phone">Phone Number</string>
    <string name="label_gender">Gender: </string>
    <string name="label_grade">Grade: </string>
    <string name="label_birth">Date of Birth: </string>
    <string name="label_birthday">Birth:</string>
    <string name="label_address">Residential Address</string>
    <string name="label_address1">Address:</string>
    <string name="label_male">Male</string>
    <string name="label_studying">Studying</string>
    <string name="label_graduated">Graduated</string>
    <string name="label_register"><u>Sign up</u></string>
    <string name="label_forget_password"><u>Forgot password</u></string>
    <string name="label_female">Female</string>
    <string name="label_select_couress">Select Couress</string>
    <string name="label_edit_couress">Edit Couress</string>
    <string name="label_select_area">Preferred Teaching Area</string>
    <string name="label_select_area_title">Select Area</string>
    <string name="label_edit_area">Edit Area</string>
    <string name="label_add_timeslot">Add Timeslot</string>
    <string name="label_edit_timeslot">Edit Timeslot</string>
    <string name="label_education_background">Education Background</string>
    <string name="label_education_background2">Current Education: </string>
    <string name="label_education_status">Education Status:</string>
    <string name="label_teaching_couress">Teaching Couress</string>
    <string name="label_interested_couress">Interested Couress</string>
    <string name="label_teach_time_slot">Preferred Teaching Time Slot</string>
    <string name="label_study_time_slot">Preferred Study Time Slot</string>
    <string name="label_none_area">None area</string>
    <string name="label_none_course">Unknow Course</string>
    <string name="label_none">None</string>
    <string name="label_unknow_phone">Unknow Phone</string>
    <string name="label_unknow_address">Unknow Address</string>
    <string name="label_unknow">Unknow</string>
    <string name="label_start">Starting Time</string>
    <string name="label_end">Ending Time</string>
    <string name="label_week">Week</string>
    <string name="lable_log_out">Are you sure log out?</string>
    <string name="label_nickname">Preferred Name:</string>
    <string name="label_school">School or University:</string>
    <string name="label_major">Major: </string>
    <string name="label_tutor_experience">Tutoring Experience:</string>
    <string name="label_experience_year">Year(s)</string>
    <string name="label_experience_year2">%sYear(s)</string>
    <string name="label_student">Student: </string>
    <string name="label_self_introduction">Self Introduction(Optional):</string>
    <string name="label_self_introduction1">Self Introduction</string>
    <string name="label_self_introduction_video">Self Introduction Video(Optional):</string>
    <string name="label_optional">(Optional)</string>
    <string name="label_registration_time">Registration Time:</string>
    <string name="label_chat">Chat</string>
    <string name="btn_role_student">Find Tutors</string>
    <string name="btn_role_tutor">Find Students</string>
    <string name="btn_login_facebook">Login With Facebook</string>
    <string name="btn_login_email">Login With Email</string>
    <string name="btn_register_as_tutor">Register As Tutor</string>
    <string name="btn_register_as_student">Register As Student/Parent</string>
    <string name="btn_fill_info_tutor">Submit&amp;Become a Tutor</string>
    <string name="btn_fill_info_student">Submit&amp;Find a Tutor</string>
    <string name="btn_fragment_find_teacher_rating">Rating</string>
    <string name="btn_fragment_find_teacher_popularity">Popularity</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_take_photo">Take Photo</string>
    <string name="btn_save">Save</string>
    <string name="btn_submit">Submit</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Your Password</string>
    <string name="hint_old_password">Previous Password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_enter_nickname">Enter Your Preferred Name</string>
    <string name="hint_enter_school">Enter Your Degree or School</string>
    <string name="hint_enter_major">Enter Your Major</string>
    <string name="hint_enter_introduction">Enter Your Self Introduction</string>
    <string name="hint_enter_video_path">Enter Your Self Introduction Video Link</string>
    <string name="hint_0">0</string>
    <string name="hint_search_student_keywords">Search Student by Conditions</string>
    <string name="hint_search_teacher_keywords">Search Tutor by Conditions</string>
    <string name="hint_enter_grade">Enter Grade</string>
    <string name="hint_enter_address">Enter Your Residential Address</string>
    <string name="toast_email_empty">Email Is Empty</string>
    <string name="toast_pswd_empty">Password Is Empty</string>
    <string name="toast_newpswd_empty">New Password Is Empty</string>
    <string name="toast_login_success">Login success</string>
    <string name="toast_login_failed">Login failed</string>
    <string name="toast_register_success">Register success</string>
    <string name="toast_email_formatter_error">Email Format Wrong</string>
    <string name="toast_pswd_lenth_error">Password length can not less than 6</string>
    <string name="toast_exit">Again according to exit the program</string>
    <string name="toast_pswd_repeat_error">Two input password is not the same</string>
    <string name="toast_offline">Disconnect network, the user is offline</string>
    <string name="toast_online">The user is online</string>
    <string name="toast_without_mystudent">Whitout Student</string>
    <string name="toast_server_error">Server error</string>
    <string name="toast_register_fail">Register failed</string>
    <string name="toast_register_exist">User has existed</string>
    <string name="toast_avatar_upload">Upload Avatar Successed</string>
    <string name="toast_avatar_upload_fail">Upload Avatar Failed</string>
    <string name="toast_no_timeslot">Please add a timeslot</string>
    <string name="toast_name_isEmpty">Name is Empty</string>
    <string name="toast_hkid_isEmpty">HKID is Empty</string>
    <string name="toast_hkid_error">HKID format error</string>
    <string name="toast_phone_error">Phone Number format error</string>
    <string name="toast_phone_isEmpty">Phone Number is Empty</string>
    <string name="toast_no_data">No more further content</string>
    <string name="toast_no_more_data">No more further content</string>
    <string name="toast_netwrok_disconnected">Network Disconnected</string>
    <string name="toast_login_im_fail">IM Service does not Started</string>
    <string name="toast_no_match_student">No match student</string>
    <string name="toast_no_match_tutor">No match tutor</string>
    <string name="toast_not_select_cours">Please choice a course at least</string>
    <string name="toast_not_select_area">Please choice an area at least</string>
    <string name="toast_endtime_behind_starttime">Ending time must be behind the start time</string>
    <string name="toast_starttime_front_endtime">Starting Time must be in front of the end of time</string>
    <string name="toast_video_unplay">Video link or video format errors</string>
    <string name="toast_video_link_empety">Video link is empty</string>
    <string name="toast_token_invalid">Token expired, please login again</string>
    <string name="toast_save_successed">Save success</string>
    <string name="ok">OK</string>
    <string name="week1">Mon</string>
    <string name="week2">Tues</string>
    <string name="week3">Wed</string>
    <string name="week4">Thur</string>
    <string name="week5">Fri</string>
    <string name="week6">Sat</string>
    <string name="week7">Sun</string>
    <string name="label_activity_title">2utor Intelligence Contest!</string>
    <string name="label_activity_content">Are you smart enough to register as a tutor at 2utor? Let’s check it out!\nThis contest consists of 3 exciting games. Only the smart ones can win the prize. Let’s get started!</string>
    <string name="label_identity_code">Identity code:%s</string>
    <string name="label_activity_url">http://dev.oicomg.in:10012</string>
    <string name="label_852">+852</string>
    <string name="label_86">+86</string>
    <string name="label_44">+44</string>
    <string name="label_1">+1</string>
</resources>