<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg_color"
    android:orientation="vertical" >

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@color/btn_normal"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/ib_previous"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/selector_timetable_previous" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_datetime"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/ib_next"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/selector_timetable_next" />
        </RelativeLayout>
    </LinearLayout>
    <!-- 星期 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@color/btn_normal" >

        <TextView
            style="@style/weekName"
            android:text="@string/week7" />

        <TextView
            style="@style/weekName"
            android:text="@string/week1" />

        <TextView
            style="@style/weekName"
            android:text="@string/week2" />

        <TextView
            style="@style/weekName"
            android:text="@string/week3" />

        <TextView
            style="@style/weekName"
            android:text="@string/week4" />

        <TextView
            style="@style/weekName"
            android:text="@string/week5" />

        <TextView
            style="@style/weekName"
            android:text="@string/week6" />
    </LinearLayout>

    <GridView
        android:id="@+id/clander_main_gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:focusable="false"
        android:horizontalSpacing="1px"
        android:listSelector="@null"
        android:numColumns="7"
        android:verticalSpacing="1px" >
    </GridView>

</LinearLayout>