<?xml version="1.0" encoding="utf-8"?>
<com.tutor.ui.view.OverScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_15" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@id/fragment_my_iv_avatar"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_120"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/avatar" />

                <TextView
                    android:id="@id/fragment_my_tv_changepswd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@drawable/tv_bg"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/change_pswd"
                    android:textColor="@color/blue_color_selector"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_0"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_0"
                android:layout_marginStart="@dimen/dp_15"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dp_5"
                android:paddingTop="@dimen/dp_5" >

                <TextView
                    android:id="@id/fragment_my_tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:singleLine="true"
                    android:text="@string/label_nickname"
                    android:textSize="@dimen/sp_16" />

                <EditText
                    android:id="@id/fragment_my_et_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/editview_bg"
                    android:hint="@string/hint_enter_nickname"
                    android:inputType="text"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/sp_14" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_gender"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:id="@id/fragment_my_tv_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray_text"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!-- 学校 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/gray_light"
            android:padding="@dimen/dp_5"
            android:text="@string/label_school"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@id/fragment_my_et_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/editview_bg"
            android:hint="@string/hint_enter_school"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/sp_14" />

        <!-- 毕业状态 -->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray_light"
                android:padding="@dimen/dp_5"
                android:text="@string/label_education_status"
                android:textSize="@dimen/sp_16" />

            <RadioGroup
                android:id="@id/fragment_my_rg_es"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@id/fragment_my_rb_studying"
                    android:layout_width="@dimen/dp_90"
                    android:layout_height="wrap_content"
                    android:background="@drawable/find_teacher_tab_left"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/label_studying"
                    android:textColor="@color/find_teacher_tab_txt_color" />

                <RadioButton
                    android:id="@id/fragment_my_rb_graduated"
                    android:layout_width="@dimen/dp_90"
                    android:layout_height="wrap_content"
                    android:background="@drawable/find_teacher_tab_right"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/label_graduated"
                    android:textColor="@color/find_teacher_tab_txt_color" />
            </RadioGroup>
        </FrameLayout>
        <!-- 专业 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/gray_light"
            android:padding="@dimen/dp_5"
            android:text="@string/label_major"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@id/fragment_my_et_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/editview_bg"
            android:hint="@string/hint_enter_major"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/sp_14" />
        <!-- 经验年限 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/label_tutor_experience"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@id/fragment_my_et_year"
                android:layout_width="@dimen/dp_50"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/editview_bg"
                android:hint="@string/hint_0"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/label_experience_year"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5"
                android:text="@string/label_registration_time"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@id/fragment_my_tv_registration_time"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:background="@drawable/editview_bg"
                android:singleLine="true"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <TextView
            android:id="@id/fragment_my_tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_30"
            android:padding="@dimen/dp_10"
            android:text="@string/edit_personal_info"
            android:textColor="@color/blue_color_selector"
            android:textSize="@dimen/sp_18" />
        <!-- 介绍 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@color/gray_light"
            android:padding="@dimen/dp_5"
            android:text="@string/label_self_introduction"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@id/fragment_my_et_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/editview_bg"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/hint_enter_introduction"
            android:inputType="text"
            android:minHeight="@dimen/dp_120"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/sp_14" />

        <!-- 视频介绍 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/gray_light"
            android:padding="@dimen/dp_5"
            android:text="@string/label_self_introduction_video"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@id/fragment_my_et_video_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/editview_bg"
            android:hint="@string/hint_enter_video_path"
            android:inputType="text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/sp_14" />

        <ImageButton
            android:id="@id/fragment_my_ib_play"
            android:layout_width="@dimen/dp_240"
            android:layout_height="@dimen/dp_120"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/title_bar_btn_bg_selector"
            android:contentDescription="@string/app_name"
            android:src="@drawable/play_selector" />

        <Button
            android:id="@id/fragment_my_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/btn_bg_selector"
            android:text="@string/btn_save"
            android:textColor="@color/white" />
    </LinearLayout>

</com.tutor.ui.view.OverScrollView>