<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/dp_40" >

    <Button
        android:id="@id/change_avatar_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_facebook_bg"
        android:text="@string/btn_take_photo"
        android:textColor="@color/white" />

    <Button
        android:id="@id/change_avatar_btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/login_btn_facebook_bg"
        android:text="@string/btn_gallery"
        android:textColor="@color/white" />

    <Button
        android:id="@id/change_avatar_btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/choice_role_tutor_btn_bg"
        android:text="@string/cancel"
        android:textColor="@color/white" />

</LinearLayout>